--- a/hw5.tex
+++ b/hw5.tex
@@ -265,42 +265,64 @@
 		\renewcommand{\qedsymbol}{}
 		An Algorithm to calculate the sequence of die rolls gets to winning square as quickly as possible.
 		\begin{lstlisting}[basicstyle=\fontsize{8}{9}\selectfont\ttfamily]
+// this is a pseudo-code, for convenience we define add_square() for vector<T> similar to push_back() in C++. It returns an original list added with a new square at the end and won't impact original list
+// push_back() is simply C++ push_back() method for vector<T>
 vector<int> findSeq( int[] d )
 {
+    // define infinity as the largest number we can get
+    // won't use INT_MAX for convenience (overflowing issue)
     // here we denote the size of d[] as n
     // Will explain the variables used in algorithm later
     // if i is a ladder, d[i] = j, j>i (j is the termination of i)
     // if i is a chute, d[i] = undefined
     // if i is a normal square, d[i] = i
-    if(n <= 6) return {d[n]}; //trivially solved by rolling once
-    int dp[n+1]; int seq[n+1]; dp[0] = 0; seq[0] = -1;
+    if(n <= 6) return {0, d[n]}; //trivially solved by rolling once
+    struct square {
+        int count; // count of times of rolls
+        vector<int> seq; // quickest sequence to reach square i
+    }
+    // initialization
+    vector<square> dp;
+    dp.push_back( {0, {0}} );
     for(int i = 1; i <= n; ++i) {
-        if( i>=1 && i<=6 && d[i] != undefined ) dp[i] = 1;
-        else dp[i] = ; //don't consider overflow situation for convenience
+        if(i>=1 && i<=6 && d[i] != undefined) dp.push_back( {1, {0,i} } ) // roll once, path = {0,i}
+        else dp.push_back( {infinity, {} } );
     }
     for(int i = 1; i <= 6; ++i) {
-        if(d[i]>i) { dp[d[i]] = 1; seq[d[i]] = i; }
-    }
-    for(int i = 7; i <= n; ++i) {
-        if(d[i] == undefined) continue;
-        int min_predecessor = min(dp[i-1],dp[i-2],dp[i-3],dp[i-4],dp[i-5],dp[i-6]);
-        //it is trivial to find index for min_predecessor by simply comparison, denote it as j for convenience
-        int min_pred_index = j; //dp[j] is the min from dp[i-6:k-1]
-        dp[i] = min(min_predecessor+1, dp[i]);
-        //notice that whenever we reach i, we either roll a dice from its 6 predecessor
-        //or we have reached i through a ladder k < i. if we reached i before, seq[i] = k, dp[i] != \infty
-        seq[i] = dp[i] < dp[j] + 1 ? k : j;
-        if(d[i] > i) {
-            dp[d[i]] = min(dp[j] + 1, dp[d[i]]);
-            seq[d[i]] = dp[j]+1 < dp[d[i]] ? j : seq[d[i]];
+        if(d[i]>i) {
+            dp[d[i]].count = 1;
+            dp[d[i]].seq = dp[i].seq; // climb to d[i]
         }
     }
-    vector<int> res; int index = n;
-    while(index > 0) {
-        res.push_back(seq[index]);
-        index = seq[index];
+    // start finding sequence
+    for(int i = 7; i <= n; ++i) {
+        if(d[i] == undefined) continue;
+        int min_predecessor_count = dp[i-6].count;
+        int min_predecessor_index = i-6;
+        for(int s = i-5; s <= i-1; ++s){
+            if(dp[s].count < min_predecessor_count){ //find min count & index
+                min_predecessor_count = dp[s].count
+                min_predecessor_index = s;
+            }
+        }
+        dp[i].count = min(min_predecessor+1, dp[i]);
+        //notice that whenever we reach i, we either roll a dice from its 6 predecessor
+        //or we have reached i through a ladder 0 <= k < i. if we reached i before, seq[i] = k, dp[i] != infinity. Denote i's predecessor's index as k if i has one. We can also simply find k by looking at the last element of dp[i].seq.back()
+        if(dp[i].count < dp[min_predecessor_index].count + 1){ //it is cheaper to reach i through k
+            //we do nothing since it has had a quickest sequence
+        } else {
+            dp[i].seq = dp[min_predecessor_index].seq.add_square(i); //add i since need to roll to i
+        }
+        
+        if(d[i] > i) { // i is ladder
+            dp[d[i]].count = min(dp[min_predecessor_index].count + 1, dp[d[i]].count);
+            if(dp[min_predecessor_index].count+1 < dp[d[i]].count) { // we roll to i once from min_predecessor_index
+                dp[d[i]].seq = dp[min_predecessor_index].seq; //don't need to add d[i] since we climb there
+            }
+        }
     }
-    return res.reverse();
+    
+    return dp[n].seq; //if dp[n].count == infinity or dp[n].seq.size() == 0, can't reach n
 }
 		\end{lstlisting} 
 \end{proof}
@@ -313,12 +335,24 @@ vector<int> findSeq( int[] d )
 
         \textbf{int[] d:} this is an input array that the problem provides, d[i] stores the information for each square, as explained from line 3 to 7
 
-        \textbf{int[] dp:} dp[] needs n+1 elements since the map ranges from 0 to n (Don't consider the '/' char here since it's a pseudo-code). i $\in$ [0 , n], dp[i] is the least times of rolling a dice to get i. Notice that, for every i$\in$[0,n], if i is a chute, dp[i] stays INT\_MAX since we will never roll a dice to reach. For the first 6 squares, we initialize them to 1 if they are not chutes since we can roll from 1-6 from starting point 0 if they are not chute. For the [7:n] squares, we initialize them to $\infty$ since we haven't reach them, it takes infinite steps to reach.
+        \textbf{int[] dp:} dp[] needs n+1 elements since the map ranges from 0 to n (Don't consider the '/' char here since it's a pseudo-code). i $\in$ [0 , n], dp[i] is the least times of rolling a dice to get i. Notice that, for every i$\in$[0,n], if i is a chute, dp[i] stays INT\_MAX since we will never roll a dice to reach. 
+        
+        \textit{Initialization:} \textbf{dp[0] = 0} because we start at 0. \textbf{For [1:6] squares,} we initialize them to 1 if they are not chutes since we can roll from 1-6 from starting point 0 if they are not chute. If i is a ladder, i = 1,2,3,4,5,6, we also update dp[d[i]] = 1 because they only take one step from ladder to d[i]. \textbf{For the [7:n] squares,} we initialize them to $\infty$ since we haven't reach them before we start finding them, it takes infinite rolls to reach. 
 
-        \textbf{int[] seq:} seq[] also needs n+1 elements since the map ranges from 0 to n (Don't consider '/' char). i $\in$ [0 , n], seq[i] = j, 0 <= j < i, j is the predecessor of square i on the sequence that takes least rolls to arrive i.
+        \textbf{int[] seq:} seq[] also needs n+1 elements since the map ranges from 0 to n (Don't consider '/' char). i $\in$ [0 , n], seq[i] = j, 0 <= j < i, j is the predecessor of square i on the sequence that takes least rolls to arrive i. 
+        
+        \textit{Initialization:} \textbf{seq[0] = -1} because there's predecessor for 0. \textbf{For [1:6],} we initialize them to 0 because we can get [1:6] by simply on roll. If i is a ladder, i = 1,2,3,4,5,6, we also update seq[d[i]] = i because i is the predecessor for the least-rolling sequence to d[i]. \textbf{For [7:n],} we initialize them to $\infty$ since we haven't found their predecessor.
 
         \textbf{vector<int> res:} res is the returned sequence that we find in the algorithm.
 \end{proof}
+
+
+
+
+
+
+
+
 
 \begin{theorem*}{}
     For DP, we often analyze relatively easy (or even trivial) properties of the optimum solution, and exploit them to derive an efficient algorithm
